# powda

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  build.zig  build.zig.zon
include/powda/: buffer.hpp  engine.hpp  logger.hpp  materials.hpp  pixel_grid.hpp  renderer.hpp  scheduler.hpp  shader.hpp  shader_program.hpp  time_step.hpp  window.hpp  world.hpp
include/powda/graphics/: renderer.hpp  shader.hpp  shader_program.hpp  window.hpp
include/powda/simulation/: gravity_simulation.hpp  material.hpp  materials.hpp  world.hpp
include/powda/task/: handle_inputs.hpp  render_world.hpp  scheduler.hpp  scheduling_task.hpp  simulate_powders.hpp  time_step.hpp
src/: CMakeLists.txt  buffer.cpp  engine.cpp  logger.cpp  main.cpp  main.zig  pixel_grid.cpp  renderer.cpp  scheduler.cpp  shader.cpp  shader_program.cpp  window.cpp  world.cpp  world.zig
src/graphics/: CMakeLists.txt  renderer.cpp  shader.cpp  shader.zig  shader_program.cpp  window.cpp  window.zig
src/simulation/: CMakeLists.txt  gravity_simulation.cpp  material.cpp  material.zig  root.zig  world.cpp  world.zig
src/task/: CMakeLists.txt  handle_inputs.cpp  render_world.cpp  scheduler.cpp  simulate_powders.cpp
